Fix footer styling
It was overlapping the submit button on the self-reporting page, and was
too close to the main content of other pages.

Also shortens the feedback text.

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,7 +1,4 @@
 .footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
   width: 100%;
   background-color: var(--bg-color);
   color: var(--text-color);
@@ -10,6 +7,8 @@
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  margin-bottom: -10px;
+  margin-top: 10px;
 }
 
 .link {
